<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.themoviedb.PeopleActivity"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:minHeight="100dp"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.android.themoviedb.PeopleActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin"
                android:text=""
                android:textColor="@android:color/white"
                android:lineSpacingExtra="3dp"
                android:clickable="true"
                android:onClick="expandView"
                android:background="?attr/selectableItemBackground"/>

            <View
                android:id="@+id/hr_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccentDark"
                android:layout_below="@id/tv_biography" />

            <TextView
                android:id="@+id/tv_people_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hr_1"
                android:padding="@dimen/text_margin"
                android:text="@string/details"
                android:textColor="#f0f0f0"
                android:textSize="20sp"/>

            <RelativeLayout
                android:id="@+id/la_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:layout_below="@id/tv_people_details"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_aka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/also_known_as"
                    android:textColor="@color/colorAccentDark"
                    android:textSize="14sp"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/tv_aka_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="#f0f0f0"
                    android:layout_toRightOf="@id/tv_aka"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/born"
                    android:layout_below="@+id/tv_aka_text"
                    android:textColor="@color/colorAccentDark"
                    android:textSize="14sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/tv_birthday_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="#f0f0f0"
                    android:layout_alignStart="@+id/tv_aka_text"
                    android:layout_alignBaseline="@id/tv_birthday"/>

                <TextView
                    android:id="@+id/tv_pob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_of_birth"
                    android:layout_below="@+id/tv_birthday"
                    android:textColor="@color/colorAccentDark"
                    android:textSize="14sp"
                    android:paddingBottom="8dp"
                    android:paddingRight="4dp"/>

                <TextView
                    android:id="@+id/tv_pob_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="#f0f0f0"
                    android:ellipsize="end"
                    android:layout_alignBaseline="@+id/tv_pob"
                    android:layout_alignBottom="@+id/tv_pob"
                    android:layout_alignStart="@+id/tv_birthday_text" />

                <TextView
                    android:id="@+id/tv_died"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/died"
                    android:layout_below="@+id/tv_pob"
                    android:textColor="@color/colorAccentDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_died_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="#f0f0f0"
                    android:layout_toRightOf="@+id/tv_died"
                    android:layout_below="@+id/tv_pob"
                    android:layout_alignStart="@id/tv_pob_text"
                    android:layout_above="@id/hr_2"/>

            </RelativeLayout>

            <View
                android:id="@+id/hr_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccentDark"
                android:layout_below="@id/la_details" />

            <TextView
                android:id="@+id/tv_people_movies_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hr_2"
                android:padding="@dimen/text_margin"
                android:text="@string/movies"
                android:textColor="#f0f0f0"
                android:textSize="20sp"/>

            <HorizontalScrollView
                android:id="@+id/hv_cast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_people_movies_header"
                android:scrollbars="none"
                android:fillViewport="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_people_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="16dp">

                    </android.support.v7.widget.RecyclerView>

                </RelativeLayout>

            </HorizontalScrollView>





        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
